Revise Valentine book for Sejal
Updated the Valentine book HTML content, including title, pages, and styles for a personal touch.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Valentine Book</title>
+<title>For Sejal ❤️</title>
 
 <style>
 * {
@@ -39,7 +39,7 @@ body {
 /* Book */
 .book {
     width: 340px;
-    height: 460px;
+    height: 480px; /* Slightly taller for text */
     perspective: 1500px;
     position: relative;
 }
@@ -76,6 +76,7 @@ body {
 .page h2 {
     font-weight: normal;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .page p {
@@ -90,6 +91,7 @@ body {
     padding: 10px;
     border-radius: 14px;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 .gif-box img {
@@ -102,6 +104,7 @@ body {
     font-size: 26px;
     cursor: pointer;
     animation: bounce 1.5s infinite;
+    margin-top: 10px;
 }
 
 @keyframes bounce {
@@ -118,7 +121,7 @@ body {
 
 /* Last page fix */
 .page.last .page-content {
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .page.last p {
@@ -148,6 +151,7 @@ body {
     font-size: 18px;
     margin-bottom: 12px;
     color: #fff;
+    text-align: center;
 }
 
 .lock-input {
@@ -196,19 +200,18 @@ body {
 
 <div class="book">
 
-<!-- PAGE 1 (LOCKED) -->
 <div class="page">
     <div class="lock-overlay" id="lock">
-        <div class="lock-title">Enter password</div>
-        <input class="lock-input" id="lockInput" placeholder="password">
-        <button class="lock-btn" id="unlockBtn">Unlock</button>
-        <div class="lock-error" id="lockError">Wrong password💔</div>
+        <div class="lock-title">Enter our Special Date<br>(Hint: Wedding Date)</div>
+        <input class="lock-input" id="lockInput" placeholder="DDMMYYYY">
+        <button class="lock-btn" id="unlockBtn">Unlock Heart</button>
+        <div class="lock-error" id="lockError">Wrong date! Try again 💔</div>
     </div>
 
     <div class="page-content">
-        <h2>Happy Valentine’s Day Dear 🌹💌</h2>
+        <h2>Happy Valentine’s Day Sejal 🌹💌</h2>
         <p>
-            This little book is made just for you love 🫠<br><br>
+            This little book is made just for my future wife 🫠<br><br>
             Turn the pages slowly,<br>
             every one holds a feeling.
         </p>
@@ -216,67 +219,64 @@ body {
     </div>
 </div>
 
-<!-- PAGE 2 -->
 <div class="page">
     <div class="page-content">
-        <h2 style="font-size:20px;">Loving you was my best decision 🫠🌹</h2>
+        <h2 style="font-size:20px;">My Vintage Romance 🌹</h2>
         <div class="gif-box">
             <img src="https://media.tenor.com/hmYv6-dCkGgAAAAi/bubu-dudu-bubu.gif">
         </div>
         <p>
-            Will always be your little baby bear 🐻<br>
-            My comfort place 🫠
+            Loving you feels like a 90s classic song.<br>
+            No filters, no drama.<br>
+            Just pure, simple, forever love. 🫠
         </p>
         <div class="next">➡️</div>
     </div>
 </div>
 
-<!-- PAGE 3 -->
 <div class="page">
     <div class="page-content">
-        <h2 style="font-size:15px;">Sorry for whenever i made you angry💌</h2>
+        <h2 style="font-size:15px;">You are my Safe Space 💌</h2>
         <div class="gif-box">
             <img src="https://media.tenor.com/0BlLAI6vIhoAAAAi/tkthao219-bubududu.gif">
         </div>
-        <p style="font-size:11.5px;">
-            Get angry and i will be your firebrigade 🚒
-            but would never let you stay angry for long 😓
-            Your smile is everything that makes me the one who i am
+        <p style="font-size:12px;">
+            Sorry for whenever I make you angry.<br>
+            I will always be your firebrigade 🚒<br>
+            Your smile is the only thing that matters to me.
         </p>
         <div class="next">➡️</div>
     </div>
 </div>
 
-<!-- PAGE 4 -->
 <div class="page">
     <div class="page-content">
-        <h2 style="font-size:20px;">Our dreams will be fulfilled✨</h2>
+        <h2 style="font-size:20px;">The Big Day ✨</h2>
         <div class="gif-box">
             <img src="https://media.tenor.com/5T9NoewNL9EAAAAi/bubu-dudu.gif">
         </div>
         <p>
-            The world shall see us getting married that's my manifestation
-            and our promises will be kept 🥹❤️
+            <strong>📍 Chittorgarh | Feb 21, 2026</strong><br><br>
+            The world shall see us getting married.<br>
+            That is my manifestation and my promise to you. 🥹❤️
         </p>
         <div class="next">➡️</div>
     </div>
 </div>
 
-<!-- PAGE 5 -->
 <div class="page last">
     <div class="page-content">
-        <h2>Forever ❤️</h2>
+        <h2>Forever Yours ❤️</h2>
         <p>
-            This is the last page,<br>
-            but not the end.<br>
-            Few lines for you 🌹<br><br>
-            Lost the moment i saw those beautiful brown eyes,<br>
-            got the ticklish feeling that the world knows as "love at first sight".<br>
-            Never thought you were the woman of my dreams,<br>
-            but look at me trying to look for you in each of my dreams🫠<br>
-            I maybe irritating but i do love you more than you could ever imagine,<br>
-            This valentine's day i created this, something new 🙃
-            only for you madam only for you !! 🌹💌
+            Na chand ki chah,<br>
+            Na taaron ki farmaish,<br>
+            Bas <strong>Sejal</strong> ko apna banane ki hai khwaish.<br><br>
+            Chittorgarh ki wo sham yaadgar hogi,<br>
+            Jab tu hamesha ke liye meri hogi.
+            <br><br>
+            I love you more than you can imagine.<br>
+            <br>
+            - Vikas
         </p>
     </div>
 </div>
@@ -291,7 +291,9 @@ document.querySelectorAll(".page").forEach(page => {
 });
 
 /* Date unlock */
-const correctPassword = "LOVE";
+// PASSWORD SET HERE:
+const correctPassword = "21022026"; 
+
 const lock = document.getElementById("lock");
 const input = document.getElementById("lockInput");
 const btn = document.getElementById("unlockBtn");
