--- a/index.html
+++ b/index.html
@@ -116,9 +116,14 @@ You are the heartbeat of my heart 💓
 the shine to my stars ✨
 the calm to my chaos 🫶
 
-I love you soooo much my panda 🐼❤️
+I love you soooo much my ras malai ❤️
 More than words, more than roses,
 more than yesterday and less than tomorrow 💖
+
+Har phool ki apni mehak aur apni hi shaan hai, 
+Magar mere liye tu hi mera pura gulistan hai, 
+Kaise karoon bayaan tera rutba in chand lafzon mein, 
+Sach toh ye hai ki tu har gulab se zyada haseen aur meri jaan hai.
 
 So tell me… will you take this rose? 🌹`;
 
@@ -160,3 +165,4 @@ rejectBtn.onmouseover = () => {
 
 </body>
 </html>
+
